--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
+    "moment": "^2.30.1",
+    "moment-round": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "remixicon": "^3.5.0",
     "remixicon-react": "^1.0.0"
   },
